[gd_scene load_steps=4 format=3 uid="uid://3o2g2i7dnw5y"]

[ext_resource type="Script" path="res://Player.gd" id="1_1o35f"]
[ext_resource type="Texture2D" uid="uid://cy3ehmtpl3dfu" path="res://Graphics/playerShip1_blue.png" id="2_nxb6g"]
[ext_resource type="Texture2D" uid="uid://k6vul24df1yo" path="res://Graphics/gun00.png" id="3_b46si"]

[node name="Player" type="RigidBody2D"]
collision_layer = 2
max_contacts_reported = 20
contact_monitor = true
script = ExtResource("1_1o35f")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_nxb6g")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2(0.75, 0.75)
polygon = PackedVector2Array(-8, -38, 8, -37, 12, -10, 37, 3, 42, 0, 45, -5, 49, -5, 46, 24, 42, 24, 41, 19, 35, 24, 12, 28, 8, 37, -8, 38, -14, 28, -37, 23, -41, 20, -44, 25, -47, 25, -49, -6, -45, -7, -41, -1, -36, 2, -12, -10)

[node name="Gun" type="Sprite2D" parent="."]
position = Vector2(-18, -4)
rotation = 3.14159
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_b46si")

[node name="BulletSpawn1" type="Node2D" parent="Gun"]
position = Vector2(3.8147e-06, 18)

[node name="Gun2" type="Sprite2D" parent="."]
position = Vector2(18, -4)
rotation = 3.14159
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_b46si")

[node name="BulletSpawn2" type="Node2D" parent="Gun2"]
position = Vector2(0, 18)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
